0.1 07apr2025
* initial version
0.2 05may2025
* observe moon tilt for moon symbol
* replace HTML entities by XML entities
* support x and y attribute in SVG
* localization issues
0.3 04dec2025
* if current working directory is not available
* docu how to check for the availability of this extension
0.4 08jan2025
* fix #2
* add HTML class and id attribute
* example skin
* fix docu
* id `altitude_scale`
* fix analemma height #3
* visible horizon in sky map
* path of Sun and Moon on sky
* attribute `max_width`
* french localization thanks to user Jterrettaz
* fix analemma midnight bug #5
* equation of time
0.5
* revised internationalization
* diagram of visibility of heavenly bodies
* legend in year diagram
* ability to use a picture pattern