@@ -26,3 +26,4 @@
 * diagram of visibility of heavenly bodies
 * legend in year diagram
 * ability to use a picture pattern
+* libration diagram
